# trello-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml
src/: client.rs  config.rs  main.rs  models.rs
state/: plan.md  review.md
