[package]
name = "trello-cli"
version = "0.4.0"
edition = "2024"
description = "A Rust CLI for Trello, optimized for AI agents"
license = "Apache-2.0"
repository = "https://github.com/RKeelan/trello-cli"
homepage = "https://github.com/RKeelan/trello-cli"
readme = "README.md"
keywords = ["trello", "cli", "api"]
categories = ["command-line-utilities"]
exclude = [".claude/", ".github/", "CLAUDE.md"]

[[bin]]
name = "trello"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
regex = "1"
rpassword = "7"

[dev-dependencies]
tempfile = "3"
